# chess

./: README.md
licenses/: sdl2_LICENSE.txt
notebooks/: analyze.ipynb  analyze_all.ipynb  analyze_one.ipynb  my_library.py
notebooks/.ipynb_checkpoints/: analyze-checkpoint.ipynb
notebooks/backup/: analyze_all.ipynb
setup_build/: CMakeLists.txt  build.xsh  config_meson.py  meson.build  meson.build.template  meson_options.txt
setup_build/main/: GeneratePositions.cpp  ShowGenerated.cpp  TrainNN.cpp
setup_build/main/Dataset/: ConstraintAdd.cpp  CreateAnalyzed.cpp  CreateCsv.cpp  ParsePgn.cpp  PgnStatistics.cpp
setup_build/main/Game/: MinimaxGame.cpp  RandomGame.cpp
setup_build/main/common/: Errors.h  Helper.cpp  Helper.h  Program.cpp  Program.h
setup_build/models/first_experiment/: best_model.pt  info.txt
setup_build/models/first_experiment/(0, 2, 2, 2, 7)/: bitboards.chess  statistics.txt
setup_build/models/first_experiment/(0, 2, 2, 2, 8)/: bitboards.chess  statistics.txt
setup_build/models/first_experiment/(1, 2, 1, 2, 7)/: bitboards.chess  statistics.txt
setup_build/models/first_experiment/(1, 2, 1, 2, 8)/: bitboards.chess  statistics.txt
setup_build/models/first_experiment/(1, 2, 2, 1, 7)/: bitboards.chess  statistics.txt
setup_build/models/first_experiment/(1, 2, 2, 1, 8)/: bitboards.chess  statistics.txt
setup_build/models/first_experiment/(1, 2, 2, 2, 7)/: bitboards.chess  statistics.txt
setup_build/models/second_experiment/: best_model.pt  info.txt
setup_build/models/second_experiment/(0, 2, 2, 2, 7)/: statistics.txt
setup_build/models/second_experiment/(0, 2, 2, 2, 8)/: bitboards.chess
setup_build/models/second_experiment/(1, 1, 2, 2, 8)/: bitboards.chess  statistics.txt
setup_build/models/second_experiment/(1, 2, 0, 2, 7)/: bitboards.chess
setup_build/models/second_experiment/(1, 2, 1, 1, 6)/: statistics.txt
setup_build/models/second_experiment/(1, 2, 1, 1, 8)/: bitboards.chess
setup_build/models/second_experiment/(1, 2, 1, 2, 7)/: bitboards.chess  statistics.txt
setup_build/models/second_experiment/(1, 2, 1, 2, 8)/: bitboards.chess
setup_build/models/second_experiment/(1, 2, 2, 0, 7)/: statistics.txt
setup_build/models/second_experiment/(1, 2, 2, 1, 7)/: bitboards.chess
setup_build/models/second_experiment/(1, 2, 2, 2, 6)/: bitboards.chess  statistics.txt
setup_build/scripts/: show_nn_learning.py  statistics_show_graph.py
setup_build/src/: IS_LIB_TORCH.h
setup_build/src/common/: BinaryFile.h  System.h
setup_build/src/dataset/: BitboardAnalyzed.cpp  BitboardAnalyzed.h  ChessDataset.cpp  ChessDataset.h  ChessDataset_2.cpp  ChessDataset_2.cpp_tried  ChessDataset_2.h  ChessDataset_2.h_tried  ChessDataset_analyzed.cpp  ChessDataset_analyzed.h  CustomExample.h  DatasetIterator.cpp  DatasetIterator.h  StopIteration.h
setup_build/src/dataset/parsing/: ConstraintGameData.h  ParsedGame.cpp  ParsedGame.h  SanGame.cpp  SanGame.h  SanParser.cpp  SanParser.h
setup_build/src/engineCore/: ChessDefinitions.cpp  ChessDefinitions.h  PieceIterator.h
setup_build/src/engineCore/chessComponents/: Bitboard.cpp  Bitboard.h  Board.cpp  Board.h  Move.h  Piece.cpp  Piece.h
setup_build/src/engineCore/chessLogic/: BoardController.cpp  BoardController.h  Game.cpp  Game.h  Rules.cpp  Rules.h
setup_build/src/evaluation/: Constraint.cpp  Constraint.h  Constraints.h  Evaluator.cpp  Evaluator.h  Search.cpp  Search.h
setup_build/src/game/: AbstractGame.h  MinimaxGame.cpp  MinimaxGame.h  RandomGame.cpp  RandomGame.h
setup_build/src/graphics/: Chessboard.cpp  Chessboard.h  GraphicPieces.cpp  GraphicPieces.h  GraphicsGame.cpp  GraphicsGame.h
setup_build/src/neural/: ConvNet.cpp  ConvNet.h  ResNet.cpp  ResNet.h  ResidualBlock.cpp  ResidualBlock.h  SimpleNet.cpp  SimpleNet.h
setup_build/src/pgn/: CMI.cpp  CMI.hpp
setup_build/src/terminal/: Color.cpp  Color.h  Coors.h  DrawingChars.cpp  DrawingChars.h  LineQuadrant.cpp  LineQuadrant.h  Logging.cpp  Logging.h  ProgressShower.cpp  ProgressShower.h  Space.cpp  Space.h  UnitCircle.cpp  UnitCircle.h  Vector.h
setup_build/tests/: BoardController_test.cpp  Board_test.cpp  Evaluator_test.cpp  Piece_test.cpp  Rules_test.cpp  meson.build
statistics/(0, 2, 2, 2, 7)/: bitboards.chess
statistics/(0, 2, 2, 2, 8)/: statistics.txt
statistics/(1, 2, 0, 2, 6)/: bitboards.chess  statistics.txt
(+16 files in other folders)
